fix(components): align vertical alignment to top

--- a/src/components-generic/date-input.component.css
+++ b/src/components-generic/date-input.component.css
@@ -6,6 +6,7 @@
   padding: 0;
   overflow: hidden;
   border-color: rgba(var(--bg-color-internal), 100%);
+  vertical-align: top;
 }
 
 .date-input__input:disabled {
