--- a/src/components-generic/text-input.component.css
+++ b/src/components-generic/text-input.component.css
@@ -8,6 +8,7 @@
   resize: none;
   border-color: rgba(var(--bg-color-internal), 100%);
   white-space: nowrap;
+  vertical-align: top;
 }
 
 .text-input__input-multiline {
